--- a/resources/docker/php/Dockerfile
+++ b/resources/docker/php/Dockerfile
@@ -30,8 +30,8 @@ RUN cd ~ && \
     php composer-setup.php --install-dir=/usr/local/bin --filename=composer
 
 # NodeJS
-#RUN curl -sL https://deb.nodesource.com/setup_14.x | bash - && \
-#    apt-get install --no-install-recommends --yes nodejs
+RUN curl -sL https://deb.nodesource.com/setup_14.x | bash - && \
+    apt-get install --no-install-recommends --yes nodejs
 
 # Docker
 EXPOSE 80
